Basic demo of buggy version done

--- a/index.fixed.html
+++ b/index.fixed.html
@@ -17,7 +17,7 @@
 
         <div class="container">
 
-            <h2>Buggy map</h2>
+            <h2>Fixed map</h2>
 
             <div class="map-wrapper">
 
@@ -29,7 +29,7 @@
 
             </div>
 
-            <a href="index.fixed.html">Fixed version</a>
+            <a href="index.html">Buggy version</a>
 
         </div>
 
