--- a/index.fixed.html
+++ b/index.fixed.html
@@ -34,7 +34,7 @@
         </div>
 
         <script src="js/vendor/jquery-1.12.0.min.js"></script>
-        <script src="js/vendor/d3.min.js"></script>
+        <script src="js/vendor/d3.js"></script>
         <script src="js/vendor/topojson.min.js"></script>
         <script src="js/main.js"></script>
 
