--- a/index.html
+++ b/index.html
@@ -1,42 +1,15 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>chrisapplegate.github.io</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
 
-        <div class="container">
-
-            <h2>Buggy map</h2>
-
-            <div class="map-wrapper">
-
-                <svg></svg>
-
-                <div class="map-meta">
-                    Last clicked state: <span>n/a</span>
-                </div>
-
-            </div>
-
-            <a href="index.fixed.html">Fixed version</a>
-
-        </div>
-
-        <script src="js/vendor/jquery-1.12.0.min.js"></script>
-        <script src="js/vendor/d3.js"></script>
-        <script src="js/vendor/topojson.min.js"></script>
-        <script src="js/main.js"></script>
 
     </body>
 </html>
