--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>chrisapplegate.github.io</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>onlytwo.io : Coming Soon</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    </head>
-    <body>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
 
+  </head>
+  <body>
+    <main>
+      <div id="slogan">
+        There are Only Two Hard Problems in computer science...
+      </div>
+    </main>
 
-    </body>
+    <footer>
+      &copy; 2019 Only Two Hard Problems Ltd
+    </footer>
+  </body>
 </html>
